--- a/page1.html
+++ b/page1.html
@@ -48,7 +48,7 @@ IMG.displayed {
     </li>
   </ul>
 </nav>
-<IMG class="displayed" src="me1.JPG">
+<IMG class="displayed" src="me1.jpg">
 <p>Привет, меня зовут Настя, мне 16 лет. Живу в Украине на Закарпатье, в прекрасном городе Ужгород!</p>
 <IMG class="displayed" src="alley.jpg">
 <p>В моём городе находтся самая длинная липовая аллея в Европпе! Каждый день мой путь со школы домой проходит через неё, и каждый день она выглядит по-разному.</p>
