--- a/page2.html
+++ b/page2.html
@@ -47,21 +47,21 @@ height: 70%;
 </nav>
 <center>
 <h1>Немного моих фото</h1>
-<img src="flower.JPG">
+<img src="flower.jpg">
 <p>Десятки таких цветов я видела этим летом</p>
-<img src="dusya.JPG">
+<img src="dusya.jpg">
 <p>А это милейшая собака моей бабушки, по Имени Дуся</p>
-<img src="gleb.JPG">
+<img src="gleb.jpg">
 <p>Однажды, мы с братом устроили фотосессию ночью. Вышло интересно</p>
-<img src="mish.JPG">
+<img src="mish.jpg">
 <p>Мышку словили. У неё такие милые лапки! (она жива)</p>
-<img src="phonik.JPG">
+<img src="phonik.jpg">
 <p>С детства любимая мною игрушка</p>
-<img src="sunset.JPG">
+<img src="sunset.jpg">
 <p>Закаты над речкой Уж...</p>
-<img src="svobodka.JPG">
+<img src="svobodka.jpg">
 <p>Самая маленькая статуя свободы в Мире!</p>
-<img src="we.JPG">
+<img src="we.jpg">
 <p>А это я, мой брат и папа)</p>
 </center>
 </body>
