--- a/page3.html
+++ b/page3.html
@@ -51,5 +51,48 @@ h1 {
    height="50" alt="Пример"></a>
 <a href="https://vk.com/rybchanskaya"target="_blank"><img src="вк.png" width="50" 
    height="50" alt="Пример"></a>
+
+<div class="container">
+  <div class="row justify-content-start">
+    <div class="col-4">
+      Это макет сайта
+    </div>
+    <div class="col-4">
+      Всего лишь тренировка
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-4">
+      А это просто колонки
+    </div>
+    <div class="col-4">
+     Очень много колонок
+    </div>
+  </div>
+  <div class="row justify-content-end">
+    <div class="col-4">
+      Всё разбросано
+    </div>
+    <div class="col-4">
+      Прям бардак из срочек
+    </div>
+  </div>
+  <div class="row justify-content-around">
+    <div class="col-4">
+      Это интересно кому-то читать?
+    </div>
+    <div class="col-4">
+      Адрес не настоящий)
+    </div>
+  </div>
+  <div class="row justify-content-between">
+    <div class="col-4">
+      Такого номера телефона нет
+    </div>
+    <div class="col-4">
+      Спасибо за посещение
+    </div>
+  </div>
+</div>
 </body>
 </html>
